--- a/svc/hecate/src/pages/home/index.module.scss
+++ b/svc/hecate/src/pages/home/index.module.scss
@@ -65,9 +65,10 @@ html, body {
   &::before {
     content: '';
     position: absolute;
-    left: 0;
-    right: -50%;
+    left: 50%;
+    transform: translateX(-50%);
     bottom: 0;
+    width: 100%;
     height: 150px;
     background: radial-gradient(ellipse at center, $flame-glow 0%, transparent 70%);
     pointer-events: none;
